--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
-*{
-  font-family: "Poppins", sans-serif;;
-}
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: "Poppins", sans-serif;;
+    background-color: #3cbeff;
+    color: #fafafa;
+    line-height: 1.6;
+  }
+  
